# django-discord-oauth2

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
discord_oauth2/: __init__.py  urls.py  views.py
django_discord_oauth2/: __init__.py  views.py
example/app/: models.py  urls.py  views.py
example/app/migrations/: 0001_initial.py  0002_alter_user_id.py
example/app/templates/: home.html  index.html
example/discord_auth/: apps.py  urls.py  views.py
example/example/: settings.py  urls.py
